--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,10 @@
     "zustand": "4.5.4"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
     "typescript": "5.5.4",
-    "vite": "5.4.3"
+    "vite": "^7.1.3"
   }
 }
