--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@tanstack/react-query": "5.56.2",
     "react": "18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.3.1",
     "react-hot-toast": "2.4.1",
     "react-player": "2.16.0",
